Improve source code integration tests.
Add dumb agent and docker agent based tests.